fix error in spacing for privacy

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -82,6 +82,7 @@ div.privacy {
   margin-left: auto;
   margin-right: auto;
   width: 40%;
+  font-family: 'Bitter', serif;
 }
 
 #facebook-signin {
